# mcp-apps-viewer

./: .gitignore  Dockerfile  README.md  dagger.json  package-lock.json  package.json  pyproject.toml  server.py  todo.md
.claude/: .pre-commit-config.yaml  README.md  settings.json
.claude/agents/: svelte-file-editor.md
.claude/skills/add-app-to-server/: SKILL.md
.claude/skills/convert-web-app/: SKILL.md
.claude/skills/python-tests/: SKILL.md
.claude/skills/upload-files/: SKILL.md
.claude/skills/view-document-guide/: SKILL.md
.dagger/: go.mod  main.go
examples/: example.txt
src/: __init__.py  alto.py  fetchers.py  models.py  parser.py  tools.py
tests/: conftest.py  test_fetchers.py  test_parser.py  test_perf.py  test_tools.py
tests/fixtures/: 30002056_00010.xml  R0001203_00010.xml  example.txt
todo-mcp/: README.md  server.py
todo-mcp/frontend/: package.json  vite.config.ts
todo-mcp/frontend/src/: App.svelte
ui/: App.svelte  global.css
ui/components/: CanvasToolbar.svelte  DocumentContainer.svelte  DocumentViewer.svelte  EmptyState.svelte  PolygonStylePopover.svelte  SearchBar.svelte  ThumbnailStrip.svelte  TranscriptionPanel.svelte
ui/lib/: canvas.ts  constants.ts  context.ts  geometry.ts  overlays.ts  resize.ts  types.ts  utils.ts
