[project]
name = "riksarkivet-viewer"
version = "0.1.0"
description = "Riksarkivet Document Viewer - Interactive ALTO XML visualization"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "fastmcp>=3.0.2",
    "pillow>=12.1.1",
]

[project.scripts]
riksarkivet-viewer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["server.py", "src/**", "dist/**"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
